[gd_scene load_steps=2 format=3 uid="uid://b77uojnanpipq"]

[ext_resource type="Script" path="res://game/ui/debug/stat_changer.gd" id="1_6v2uh"]

[node name="StatChanger" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_6v2uh")

[node name="MinusButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "-"

[node name="StatName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "STAT_NAME:"

[node name="StatValue" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "999"

[node name="PlusButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "+"
